# mtheoretical

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.md  MANIFEST.IN  README.md  README.txt  beanim.figures.html  beanim.html  beanim.objects.html  beanim.tables_and_plots.html  beanim.templates.html  beanim.text_and_organisation.html  beanim.tools.html  color_scheme.py  genindex.html  index.html  manim.cfg  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.html  setup.py  src.html  src.objects.html  src.tables_and_plots.html  src.templates.html  src.text_and_organisation.html  src.tools.html
.github/workflows/: docs.yml  main.yml  publish.yml  test.yml
_modules/: index.html
_sources/: beanim.figures.rst.txt  beanim.objects.rst.txt  beanim.rst.txt  beanim.tables_and_plots.rst.txt  beanim.templates.rst.txt  beanim.tools.rst.txt  index.rst.txt
docs/: beanim.tools.rst  conf.py  equations.rst  extra.rst  index.rst  modules.rst  objects.rst  src.templates.rst  src.text_and_organisation.rst  src.tools.rst  tables_and_plots.rst  templates.rst  text_and_organisation.rst
docs/source/: beanim.rst  beanim.text_and_organisation.rst  beanim.tools.rst  conf.py  index.rst  modules.rst
examples/: example_equations.py  example_extraction.py  example_objects.py  example_tables_plots.py  example_text_organisation.py
examples/equation_dictionaries/: eq_cosmo.txt  eq_db_corrections.txt  eq_db_scales.txt  eq_gc.txt
examples/equations/: eq_metric.txt
html/: .buildinfo  genindex.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.objects.html  src.tables_and_plots.html  src.templates.html  src.text_and_organisation.html  src.tools.html
html/_sources/: index.rst.txt  src.tables_and_plots.rst.txt
mtheoretical/: __init__.py
mtheoretical/equations/: eq_em_action.py  eq_gc.py  eq_general.py  eq_quantum.py  eq_scales_db.py
mtheoretical/objects/: __init__.py
mtheoretical/src/: __init__.py
mtheoretical/tables_and_plots/: __init__.py  table_energy_scales.py  table_summary.py
mtheoretical/templates/: __init__.py  color_scheme.py
mtheoretical/text_and_organisation/: __init__.py  bulleted_list_box.py  text_general.py  title_presentation.py  title_section.py
src/: __init__.py
src/beanim/: __init__.py
src/beanim.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/equations/: __init__.py  eq_actions.py  eq_cosmo.py  eq_general.py  eq_junc.py
src/objects/: photo.py  post_it.py  (+1 more)
tests/: example_extraction.py  example_objects.py  example_tables_plots.py  example_text_organisation.py  example_tools.py  manim.cfg
(+438 files in other folders)
