[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
classifiers = []  # TODO: add some classifiers for PyPI
dependencies = [
  "manim>=0.17",
  "numpy>=2.0.2",
]
description = "Add your description here"  # TODO: change
dynamic = ["readme", "version"]
keywords = []  # TODO: add some keywords for PyPI
license = "MIT"  # TODO: choose a LICENSE (e.g., MIT) and create LICENSE.md
name = "beanim"
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  "furo>=2024.8.6",
  "sphinx>=7.4.7",
]
tests = [
  "pytest>=8.3.4",
]

[project.urls]
Documentation = "https://panopepino.github.io/beanim/"
Repository = "https://github.com/PanoPepino/beanim"

[tool.hatch.version]
path = "src/beanim/__version__.py"

[tool.ruff.lint]
extend-ignore = []
extend-select = [
  "D",  # Documentation lints
  "I",  # Isort
  "TID",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
isort = {known-first-party = ["beanim", "tests"]}

[tool.uv]
dev-dependencies = [
  "beanim[docs,tests]",
  "pre-commit>=3.5.0",
]
