[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "Daniel Panizo", email = "panizofisico@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: OS Independent",
]
dependencies = [
  "manim>=0.17",
  "numpy>=2.0.2",
  "pybtex>=0.23.0",
]
description = "Set of libraries to obtain a similar beamer-like experience while using manim and manim-slides"
dynamic = ["readme", "version"]
keywords = ["manim", "slides", "presentations", "beamer"]
license = "MIT"
license-files = ["LICENSE*"]  # Glob pattern for license files
name = "beanim"
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  "furo>= 2024.8.6",
  "sphinx>= 7.4.7",
]
tests = [
  "pytest>= 8.3.4",
]

[project.urls]
Documentation = "https://panopepino.github.io/beanim/"
Repository = "https://github.com/PanoPepino/beanim"

[tool.hatch.version]
path = "src/beanim/__version__.py"

[tool.ruff.lint]
extend-ignore = []
extend-select = [
  "D",  # Documentation lints
  "I",  # Isort
  "TID",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
isort = {known-first-party = ["beanim", "tests"]}

[tool.uv]
dev-dependencies = [
  "beanim[docs,tests]",
  "pre-commit>=3.5.0",
]
